# maintenance

./: .env.dailybackup.template  .env.grantselectfornoorausage.template  .gitignore  503.html  README.md  dailybackup.py  deleteoldedrreports.sh  diffpiprequirements.py  grantselectfornoorausage.py  pyproject.toml  requirements.txt  update-prefect-blocks.py  updateairbyteserverblocks.py
.github/ISSUE_TEMPLATE/: new-org.md  new_org.md  new_org.yaml  new_org.yml
airbyte/: .env.template  getconnections.py  requirements.txt
analytics/: .env.template  analytics.sql  trackdailysyncstats.py  warehouses.template.yaml
gsm/: .env.example  delete-unused-secrets.py  requirements.txt
kubectl/: bash_functions  bash_functions.sh
pgmonitor/: monitor-pg-connections.py  pgmonitor.env.template
shofco-goauth-switch/: ab_user.py
