[project]
name = "maintenance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.9"
dependencies = [
  "boto3>=1.37.19",
  "certifi==2024.7.4",
  "charset-normalizer==3.3.2",
  "idna==3.7",
  "psycopg2-binary==2.9.10",
  "python-dotenv==1.0.1",
  "pytz>=2025.2",
  "requests==2.32.3",
  "urllib3==2.2.2",
]
